<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/background"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_marginTop="95dp"
        android:textStyle="bold"
android:textColor="@color/button_dark"
        android:textSize="30sp"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:id="@+id/textViewNom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/nom"
        />

    <EditText
        android:id="@+id/nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:background="@drawable/border"
        android:layout_marginBottom="20dp"
         />

    <TextView
        android:id="@+id/textViewAdresse"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adresse"
        />
    <EditText
        android:id="@+id/adresse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:background="@drawable/border"
        android:layout_marginBottom="20dp"
        />
    <TextView
        android:id="@+id/textViewSurface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/surface"
        android:textStyle="bold"
        android:textSize="20sp"
        />
    <EditText
        android:id="@+id/surface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:background="@drawable/border"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:id="@+id/textViewNbrPieces"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nbr_pieces"
        android:textStyle="bold"
        android:textSize="20sp"
        />
    <EditText
        android:id="@+id/nbr_pieces"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:background="@drawable/border"
        android:inputType="text"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">
    <CheckBox
        android:id="@+id/piscine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_weight="1"
        android:layout_marginRight="5dp"
        android:text="@string/piscine" />

    <Button
        android:id="@+id/calcul"
        android:minHeight="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcul"
        android:textColor="#F5F5F5"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_weight="1"
        android:layout_marginRight="5dp"
        app:backgroundTint="@color/button_purple"
        android:layout_marginBottom="10dp"

        />
    </LinearLayout>
    <TextView
        android:id="@+id/impotBase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />
    <TextView
        android:id="@+id/impotSupplementaire"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        />
    <TextView
        android:id="@+id/impotTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        />

</LinearLayout>